--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -1,18 +1,23 @@
-FROM quay.io/baselibrary/ubuntu:14.04
+FROM baselibrary/ubuntu:14.04
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
-## Add repository
+## Version
+ENV RUBY_MAJOR 2.2
+ENV RUBY_VERSION 2.2.3-1bbox1~trusty1
+
+## Repository
 RUN \
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C3173AA6 &&\
   echo "deb http://ppa.launchpad.net/brightbox/ruby-ng/ubuntu trusty main" > /etc/apt/sources.list.d/ruby.list
 
-## Install packages
+## Packages
 RUN \
   apt-get update &&\
-  apt-get install -y ruby2.2 ruby2.2-dev &&\
+  apt-get install -y ruby2.2=$RUBY_VERSION ruby2.2-dev  &&\
   rm -rf /var/lib/apt/lists/*
 
-## Install bundler
+## Additional
 RUN \
+  gem sources --add https://ruby.taobao.org/ --remove https://rubygems.org/ &&\
   gem install rake bundler --no-rdoc --no-ri
 
