--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,8 +2,8 @@ FROM baselibrary/ubuntu:14.04
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
 ## Version
-ENV RUBY_MAJOR 1.8
-ENV RUBY_VERSION 1:1.8.7.375-2bbox2~trusty1
+ENV RUBY_MAJOR %%RUBY_MAJOR%%
+ENV RUBY_VERSION %%RUBY_VERSION%%
 
 ## Repository
 RUN \
@@ -13,7 +13,7 @@ RUN \
 ## Packages
 RUN \
   apt-get update &&\
-  apt-get install -y ruby1.8=$RUBY_VERSION ruby1.8-dev rubygems1.8 &&\
+  apt-get install -y %%RUBY_PACKAGE%%=$RUBY_VERSION %%RUBY_PACKAGE%%-dev %%RUBY_RUBYGEMS%% &&\
   rm -rf /var/lib/apt/lists/*
 
 ## Additional
