--- a/1.8/Dockerfile
+++ b/1.8/Dockerfile
@@ -1,9 +1,9 @@
-FROM baselibrary/ubuntu:14.04
+FROM baselibrary/baseimage:1.0.0
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
 ## Version
-ENV RUBY_MAJOR 1.8
-ENV RUBY_VERSION 1:1.8.7.375-2bbox2~trusty1
+ENV MAJOR   1.8
+ENV VERSION 1:1.8.7.375-2bbox2~trusty1
 
 ## Repository
 RUN \
@@ -13,7 +13,7 @@ RUN \
 ## Packages
 RUN \
   apt-get update &&\
-  apt-get install -y ruby1.8=$RUBY_VERSION ruby1.8-dev rubygems1.8 &&\
+  apt-get install -y ruby1.8=$VERSION ruby1.8-dev rubygems1.8 &&\
   rm -rf /var/lib/apt/lists/*
 
 ## Additional
