--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,8 +2,8 @@ FROM baselibrary/baseimage:1.0.0
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
 ## Version
-ENV MAJOR   %%MAJOR%%
-ENV VERSION %%VERSION%%
+ENV RUBY_MAJOR   %%RUBY_MAJOR%%
+ENV RUBY_VERSION %%RUBY_VERSION%%
 
 ## Repository
 RUN \
@@ -13,7 +13,7 @@ RUN \
 ## Packages
 RUN \
   apt-get update &&\
-  apt-get install -y %%PACKAGE%%=$VERSION %%PACKAGE%%-dev %%RUBYGEMS%% &&\
+  apt-get install -y %%RUBY_PACKAGE%%=$RUBY_VERSION %%RUBY_PACKAGE%%-dev %%RUBY_GEMS%% &&\
   rm -rf /var/lib/apt/lists/*
 
 ## Additional
