--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM baselibrary/baseimage:1.0.0
+FROM baselibrary/baseimage:2.0.0
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
 ## Version
@@ -8,11 +8,10 @@ ENV RUBY_VERSION %%RUBY_VERSION%%
 ## Repository
 RUN \
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C3173AA6 &&\
-  echo "deb http://ppa.launchpad.net/brightbox/ruby-ng/ubuntu trusty main" > /etc/apt/sources.list.d/ruby.list
+  echo "deb http://ppa.launchpad.net/brightbox/ruby-ng/ubuntu xenial main" > /etc/apt/sources.list.d/ruby.list
 
 ## Packages
 RUN \
   apt-get update &&\
   apt-get install -y %%RUBY_PACKAGE%%=$RUBY_VERSION %%RUBY_PACKAGE%%-dev %%RUBY_GEMS%% &&\
   rm -rf /var/lib/apt/lists/*
-
